Edited translation jsons

--- a/projects/collect/src/assets/i18n/hi-IN.json
+++ b/projects/collect/src/assets/i18n/hi-IN.json
@@ -1,109 +1,110 @@
 {
-    "language.english":"English",
-    "language.hindi":"हिन्दी",
-    "language.tamil":"தமிழ்",
-    "language.kannada":"ಕನ್ನಡ",
-    "language.marathi":"मराठी",
-    "language.malayalam":"മലയാളം",
-    "language.telugu":"తెలుగు",
-    "language.bengali":"বাংলা",
-	"app.title": "coswara",
-	"metadata.title.no_metadata": "We need some information to continue!",
-	"metadata.tabs.disclaimer": "अस्वीकरण",
-    "metadata.tabs.metadata": "Metadata",
-	"metadata.tabs.health_status": "स्वास्थ्य की स्थिति",
-	"metadata.disclaimer.para1": "यह अध्ययन अन्य पिछले अध्ययनों पर बनाता है, जिन्होंने मानव आवाज से सांस की बीमारी की पहचान के लिए उच्च स्तर की संवेदनशीलता की सूचना दी है। रोग का पता लगाने में सांख्यिकीय महत्व वाले किसी भी उपकरण को बाद में इस ऐप के हिस्से के रूप में भी लागू किया जाएगा। इस अध्ययन में भागीदारी विशुद्ध रूप से स्वैच्छिक है और एकत्र किए गए विवरणों में व्यक्तिगत रूप से पहचान योग्य जानकारी नहीं होगी। ",
-	"metadata.disclaimer.para2": "पूरे रिकॉर्डिंग और डेटा संग्रह केवल 5 मिनट लेना चाहिए। कृपया रिकॉर्डिंग के दौरान अपने चेहरे से 20 सेंटीमीटर के आसपास अपने डिवाइस रखें और एक शांत वातावरण में रिकॉर्डिंग कीजिए। सफाई / स्वच्छता से पहले रिकॉर्डिंग डिवाइस दूसरों के साथ साझा नहीं किया जाना चाहिए।",
-    "metadata.disclaimer.para3": "भारतीय विज्ञान संस्थान आचार समिति गैर इनवेसिव रिकॉर्डिंग के प्रक्रिया को मंजूरी दी है।",
-    "metadata.disclaimer.para4": "शुरू क्लिक करके डेटा और उत्तेजनाओं संग्रह पर ले जाया जाएगा, हम समझते हैं कि आप हमारी <a href='https://coswara.iisc.ac.in/terms' target='_blank'> नियमों और शर्तों को स्वीकार करते हैं ।</a>",
-    "metadata.disclaimer.para4.alternate": "आप हमारी <a href='https://coswara.iisc.ac.in/terms' target='_blank'> नियमों और शर्तों को स्वीकार कर लिया है </a>",
-    "metadata.disclaimer.para5": "किसी भी प्रश्न के लिए, कृपया <a href='mailto:sriramg@iisc.ac.in'> sriramg@iisc.ac.in </a> संपर्क करें",
-    "metadata.buttons.start": "शुरू",
-    "metadata.buttons.start_over": "पुनः प्रारंभ करें",
-    "metadata.buttons.continue": "जारी रखें",
-    "metadata.buttons.previous": "पिछला",
-    "metadata.buttons.next": "आगे",
-    "metadata.buttons.submit": "प्रस्तुत",
-    "forms.label.age": "उम्र",
-    "forms.label.gender": "लिंग",
-    "forms.label.english_proficient": "आप अंग्रेजी में प्रवीण हैं?",
-    "forms.label.returning_user": "आप वापस आने वाले उपयोगकर्ता हैं?",
-    "forms.label.location": "स्थान",
-    "forms.label.country": "देश",
-    "forms.label.state": "राज्य / प्रांत",
-    "forms.label.locality": "इलाका / जिला",
-    "forms.label.current_status": "वर्तमान स्थिति",
-    "forms.label.health_conditions": "स्वास्थ्य की स्थिति",
-    "forms.errors.required": "अपेक्षित",
-    "forms.errors.age.valid": "वैध उम्र की तरह नहीं दिखता",
-    "forms.errors.field_required": "सभी फ़ील्ड चिह्नित (*) अनिवार्य हैं",
-    "forms.options.male": "पुरुष",
-    "forms.options.female": "महिला",
-    "forms.options.other": "अन्य",
-    "forms.options.yes": "हाँ",
-    "forms.options.no": "नहीं",
-    "forms.option.positive_mild": "मुझे Covid -19 के साथ पहचान की गई है और हल्के लक्षण है",
-    "forms.option.positive_moderate": "मुझे Covid -19 के साथ पहचान की गई है और मध्यम गंभीर लक्षण है",
-    "forms.option.recovered_full": "मुझे Covid -19 के साथ पहचान की थी और पूरी तरह से ठीक है",
-    "forms.option.resp_illness_not_identified": "मैं अन्य पूर्व मौजूदा सांस की बीमारी है लेकिन Covid -19 के साथ पहचान नहीं की गई",
-    "forms.option.no_resp_illness_exposed": "मेरे पास कोई सांस की बीमारी है, लेकिन मैं संपर्क के माध्यम से वायरस के संपर्क में किया गया हो सकता",
-    "forms.option.healthy": "मैं किसी भी सांस की बीमारियों की जरूरत नहीं है",
-    "forms.option.none_of_the_above": "इनमे से कोई भी नहीं",
-    "forms.option.cold": "सर्दी",
-    "forms.option.cough": "खांसी",
-    "forms.option.fever": "बुखार",
-    "forms.option.pneumonia": "न्यूमोनिया",
-    "forms.option.loss_of_smell": "गंध की हानि",
-    "forms.option.smoker": "धूम्रपान न करने",
-    "forms.option.asthma": "दमा",
-    "forms.option.cld": "जीर्ण फेफड़ों के रोग",
-    "forms.option.ht": "उच्च रक्तचाप",
-    "forms.option.ihd": "इस्केमिक दिल का रोग",
-    "forms.option.diabetes": "मधुमेह",
-    "record.message.info": "एक शांत वातावरण में सुनिश्चित करें कि आप कर रहे हैं और अपने चेहरे से 20 सेमी के आसपास अपने डिवाइस रखें",
-    "record.title.breathing-shallow": "श्वास (उथले)",
-    "record.title.breathing-deep": "श्वास (गहरी)",
-    "record.title.cough-shallow": "खांसी (उथले)",
-    "record.title.cough-heavy": "खांसी (भारी)",
-    "record.title.vowel-a": "स्वर / एक /",
-    "record.title.vowel-e": "स्वर / ई /",
-    "record.title.vowel-o": "स्वर / ओ /",
-    "record.title.counting-normal": "गिनती (सामान्य)",
-    "record.title.counting-fast": "गिनती (तेज)",
-    "record.title.done": "ख़त्म होना",
-    "record.description.breathing-shallow": "साँस तेजी से 5 बार",
-    "record.description.breathing-deep": "साँस गहरा 5 बार",
-    "record.description.cough-shallow": "खाँसी हल्का 3 बार",
-    "record.description.cough-heavy": "खाँसी गहरा 3 बार",
-    "record.description.vowel-a": "कहते हैं / में \"बनाया\" और बनाए रखने के रूप में जब तक संभव हो एक /",
-    "record.description.vowel-e": "कहते हैं / ई / \"चुकंदर\" में और जब तक संभव हो के रूप में बनाए रखने के",
-    "record.description.vowel-o": "कहो / ओ \"कूल\" में और बनाए रखने के रूप में जब तक संभव हो /",
-    "record.description.counting-normal": "1 से 20 के लिए गणना",
-    "record.description.counting-fast": "तेजी से 1 से 20 के लिए गणना",
-    "record.description.done": "भाग लेने के लिए आपको धन्यवाद!",
-    "record.message.initializing": "आरंभ! कृपया प्रतीक्षा कीजिये...",
+	"language.english":"English",
+	"language.hindi":"हिन्दी",
+	"language.tamil":"தமிழ்",
+	"language.kannada":"ಕನ್ನಡ",
+	"language.marathi":"मराठी",
+	"language.malayalam":"മലയാളം",
+	"language.telugu":"తెలుగు",
+	"language.bengali":"বাংলা",
+"app.title": "coswara",
+"metadata.title.no_metadata": "We need some information to continue!",
+"metadata.tabs.disclaimer": "अस्वीकरण",
+"metadata.tabs.metadata": "Metadata",
+"metadata.tabs.health_status": "स्वास्थ्य की स्थिति",
+"metadata.disclaimer.para1": "यह अध्ययन अन्य पिछले अध्ययनों पर आधारित है, जिन्होंने मानव आवाज से सांस की बीमारी की पहचान के लिए उच्च स्तर की संवेदनशील सूचना दी है। रोग का पता लगाने के लिए सांख्यिकीय महत्व वाले किसी भी उपकरण को बाद में इस एप के हिस्से के रूप में भी लागू किया जाएगा। इस अध्ययन में भागीदारी स्वैच्छिक है और एकत्र किए गए विवरणों में व्यक्तिगत रूप से पहचान योग्य जानकारी नहीं होगी। ",
+"metadata.disclaimer.para2": "पूरा रिकॉर्डिंग और डेटा संग्रह केवल 5 मिनट लेगा। कृपया रिकॉर्डिंग के दौरान अपने चेहरे से लगभग 20 सेंटीमीटर दूर अपने रिकॉर्डिंग डिवाइस अथवा फ़ोन को रखें और एक शांत वातावरण में रिकॉर्डिंग करें। सफाई/सैनिटाइज़ किये बगैर, रिकॉर्डिंग डिवाइस दूसरों के साथ साझा नहीं किया जाना चाहिए।",
+"metadata.disclaimer.para3": "भारतीय विज्ञान संस्थान की नैतिकता समिति ने इस गैर-इनवेसिव रिकॉर्डिंग की प्रक्रिया को मंजूरी दी है।",
+"metadata.disclaimer.para4": "नीचे 'शुरू' पे क्लिक करके, आप हमारी <a href='https://coswara.iisc.ac.in/terms' target='_blank'> नियम व शर्तों </a> को स्वीकार करते हैं और अपना डेटा (आवाज़) केवल अनुसंधान और विकास के लिए प्रदान करने की स्वीकृति देते हैं।",
+	"metadata.disclaimer.para4.alternate": "आपने हमारे <a href='https://coswara.iisc.ac.in/terms' target='_blank'> नियम व शर्तों </a> को स्वीकार कर लिया है ",
+	"metadata.disclaimer.para5": "किसी भी प्रश्न के लिए, कृपया <a href='mailto:sriramg@iisc.ac.in'> sriramg@iisc.ac.in </a> पे ईमेल द्वारा संपर्क करें|",
+	"metadata.buttons.start": "शुरू",
+	"metadata.buttons.start_over": "पुनः प्रारंभ करें",
+	"metadata.buttons.continue": "जारी रखें",
+	"metadata.buttons.previous": "पिछला",
+	"metadata.buttons.next": "आगे",
+	"metadata.buttons.submit": "प्रस्तुत",
+	"forms.label.age": "उम्र",
+	"forms.label.gender": "लिंग",
+	"forms.label.english_proficient": "आप अंग्रेजी में प्रवीण हैं?",
+	"forms.label.returning_user": "आप इस एप को पहले इस्तेमाल कर चुके हैं?",
+	"forms.label.location": "स्थान",
+	"forms.label.country": "देश",
+	"forms.label.state": "राज्य / प्रांत",
+	"forms.label.locality": "क्षेत्र  / जिला",
+	"forms.label.current_status": "वर्तमान स्थिति",
+	"forms.label.health_conditions": "स्वास्थ्य की स्थिति",
+	"forms.errors.required": "अपेक्षित",
+	"forms.errors.age.valid": "वैध उम्र की तरह नहीं दिखता",
+	"forms.errors.field_required": "सभी फ़ील्ड चिह्नित (*) अनिवार्य हैं",
+	"forms.options.male": "पुरुष",
+	"forms.options.female": "महिला",
+	"forms.options.other": "अन्य",
+	"forms.options.yes": "हाँ",
+	"forms.options.no": "नहीं",
+	"forms.option.positive_mild": "मुझे Covid -19 से संक्रमण हुआ है और हल्के लक्षण है",
+	"forms.option.positive_moderate": "मुझे Covid -19 से संक्रमण हुआ है और मध्यम-गंभीर लक्षण है",
+	"forms.option.recovered_full": "मुझे Covid -19 से संक्रमण हुआ था और अब पूरी तरह से ठीक हूँ",
+	"forms.option.resp_illness_not_identified": "मुझे पहले से मौजूदा सांस की बीमारी है लेकिन Covid -19 के साथ संक्रमण नहीं हुआ",
+	"forms.option.no_resp_illness_exposed": "मुझे कोई सांस की बीमारी नहीं है, लेकिन मुझे अन्य लोगों से संपर्क के माध्यम से वायरस संक्रमण हो सकता है",
+	"forms.option.healthy": "मुझे कोई भी सांस की बीमारी नहीं है",
+	"forms.option.none_of_the_above": "इनमे से कोई भी नहीं",
+	"forms.option.cold": "सर्दी",
+	"forms.option.cough": "खांसी",
+	"forms.option.fever": "बुखार",
+	"forms.option.pneumonia": "न्यूमोनिया",
+	"forms.option.loss_of_smell": "सूंघने की शक्ति में कमी ",
+	"forms.option.smoker": "धूम्रपान करने वाले ",
+	"forms.option.asthma": "दमा",
+	"forms.option.cld": "जीर्ण फेफड़ों के रोग",
+	"forms.option.ht": "उच्च रक्तचाप",
+	"forms.option.ihd": "इस्केमिक दिल का रोग",
+	"forms.option.diabetes": "मधुमेह",
+	"record.message.info": "सुनिश्चित करें कि आप एक शांत वातावरण में रिकॉर्डिंग कर रहे हैं और अपने चेहरे से 20 सेमी के आसपास डिवाइस रखें",
+	"record.title.breathing-shallow": "साँस (हल्की )",
+	"record.title.breathing-deep": "साँस (गहरी)",
+	"record.title.cough-shallow": "खांसी (हल्की )",
+	"record.title.cough-heavy": "खांसी (भारी)",
+	"record.title.vowel-a": "स्वर / एक /",
+	"record.title.vowel-e": "स्वर / ई /",
+	"record.title.vowel-o": "स्वर / ओ /",
+	"record.title.counting-normal": "गिनती (सामान्य)",
+	"record.title.counting-fast": "गिनती (तेज)",
+	"record.title.done": "ख़त्म होना",
+	"record.description.breathing-shallow": "साँस तेजी से 5 बार",
+	"record.description.breathing-deep": "साँस गहरा 5 बार",
+	"record.description.cough-shallow": "खाँसी हल्का 3 बार",
+	"record.description.cough-heavy": "खाँसी गहरा 3 बार",
+    "record.description.vowel-a": "\"एक\" जैसे \"ए\" कहिये और जब तक संभव हो बनाए रखे",
+    "record.description.vowel-e": "\"ईश्वर\" जैसे \"ई\" कहिये और जब तक संभव हो बनाए रखे",
+	"record.description.vowel-o": "\"ओस\" जैसे \"ओ\" कहिये और जब तक संभव हो बनाए रखे",
+	"record.description.counting-normal": "1 से 20 के लिए गणना",
+	"record.description.counting-fast": "तेजी से 1 से 20 के लिए गणना",
+	"record.description.done": "भाग लेने के लिए धन्यवाद!",
+	"record.message.initializing": "आरंभ! कृपया प्रतीक्षा कीजिये...",
  "record.message.uploading": "अपलोड हो रहा है! कृपया प्रतीक्षा कीजिये...",
  "record.button.start_recording": "रिकॉर्डिंग शुरू",
- "record.button.stop_recording": "रिकॉर्डिंग शुरू",
- "record.button.play_sample": "प्ले नमूना",
- "record.button.stop_playing": "खेलना बंद करो",
- "record.button.play": "खेल",
+ "record.button.stop_recording": "रिकॉर्डिंग बंद ",
+ "record.button.play_sample": "उदाहरण",
+ "record.button.stop_playing": " बंद करें ",
+ "record.button.play": "बजाएं",
  "record.button.stop": "रुकें",
- "record.button.upload": "डालना",
- "record.button.record_again": "रिकॉर्ड फिर से",
- "record.button.cancel": "रद्द करना",
- "thanks.heading": "भाग लेने के लिए आपको धन्यवाद!",
- "thanks.message.para1": "इस का एक हिस्सा होने के लिए धन्यवाद! कृपया इसे अपने दोस्तों और रिश्तेदारों के बीच साझा करें।",
- "thanks.message.para2": "पर हमारा अनुसरण करें <a href='https://www.facebook.com/coswara.iisc'> फेसबुक </a> और <a href='https://twitter.com/coswara_iisc'> ट्विटर </a> नवीनतम अपडेट प्राप्त करने।",
+ "record.button.upload": "अपलोड करें ",
+ "record.button.record_again": "फिर से रिकॉर्ड करें ",
+ "record.button.cancel": "रद्द करें ",
+ "thanks.heading": "भाग लेने के लिए धन्यवाद!",
+ "thanks.message.para1": "इसका हिस्सा बनने के लिए धन्यवाद! कृपया इसके बारे में अपने दोस्तों और रिश्तेदारों को बताएं ।",
+ "thanks.message.para2": " नवीनतम अपडेट प्राप्त करने के लिए, <a href='https://www.facebook.com/coswara.iisc'> फेसबुक </a> और <a href='https://twitter.com/coswara_iisc'> ट्विटर </a> पर हमें फॉलो करें।",
  "thanks.button.start_new_session": "एक नया सत्र शुरू",
- "thanks.warning.reuse": "रिकॉर्डिंग डिवाइस से पहले सफाई / स्वच्छता दूसरों के साथ साझा नहीं किया जाना चाहिए।",
+ "thanks.warning.reuse": "रिकॉर्डिंग डिवाइस को साफ/सैनिटाइज़ किये बिना दूसरों को इस्तेमाल के लिए नहीं देना चाहिए।",
  "thanks.developed_by": "द्वारा विकसित",
- "thanks.let_us_know_comments": "हमें अपनी टिप्पणियाँ बताएं!",
- "thanks.feedback": "प्रतिपुष्टि",
- "thanks.button.send_feedback": "प्रतिक्रिया भेजें",
- "thanks.feedback.complete": "आपकी प्रतिक्रिया के लिए आपका धन्यवाद!",
+
+ "thanks.let_us_know_comments": "हमें अपने सुझाव बताएं!",
+ "thanks.feedback": "सुझाव ",
+ "thanks.button.send_feedback": "सुझाव भेजें",
+ "thanks.feedback.complete": "आपकी प्रतिक्रिया के लिए धन्यवाद!",
  "note.title": "ध्यान दें",
- "note.para1": "आप फेसबुक या ट्विटर App से पेज का दौरा कर रहे हैं, तो आप माइक्रोफोन का उपयोग करने में कठिनाई का सामना कर सकते। कृपया किसी भी समर्थित ब्राउज़र में नीचे यूआरएल को खोलने के।",
+ "note.para1": "अगर आप फेसबुक या ट्विटर एप से पेज खोल रहे हैं, तो आपको माइक्रोफोन का उपयोग करने में कठिनाई हो सकती है । कृपया किसी भी समर्थित ब्राउज़र से नीचे दी गयी लिंक को खोलिये।",
  "note.supported_browsers": "समर्थित ब्राउज़र",
  "browsers.chrome": "क्रोम",
  "browsers.safari": "सफारी",
@@ -112,5 +113,7 @@
  "device.mac": "मैक",
  "device.android": "एंड्रॉयड",
  "device.ios": "आईओएस",
- "note.button.dismiss": "खारिज" 
+ "note.button.dismiss": "खारिज",
+ "forms.label.using_mask": "क्या आपने अभी मास्क पहना है?",
+	"forms.option.bd": "साँस की तकलीफे"
 }
