--- a/projects/collect/src/assets/i18n/bn-IN.json
+++ b/projects/collect/src/assets/i18n/bn-IN.json
@@ -112,5 +112,7 @@
     "device.mac": "ম্যাক",
     "device.android": "অ্যান্ড্রয়েড",
     "device.ios": "iOS",
-    "note.button.dismiss": "খারিজ করা"
+    "note.button.dismiss": "খারিজ করা",
+    "forms.label.using_mask": "আপনি কি এখন একটি মাস্ক পরেন?",
+	"forms.option.bd": "শ্বাস প্রশ্বাস"
 }
