--- a/projects/collect/src/assets/i18n/ma-IN.json
+++ b/projects/collect/src/assets/i18n/ma-IN.json
@@ -112,5 +112,7 @@
     "device.mac": "मॅक",
     "device.android": "अँड्रॉइड",
     "device.ios": "iOS",
-    "note.button.dismiss": "काढून टाकणे"
+    "note.button.dismiss": "काढून टाकणे",
+    "forms.label.using_mask": "आपण आता मुखवटा घातला आहे?",
+	"forms.option.bd": "श्वास घेण्यास अडचणी"
 }
