--- a/projects/collect/src/assets/i18n/hi-IN.json
+++ b/projects/collect/src/assets/i18n/hi-IN.json
@@ -75,9 +75,9 @@
 	"record.description.breathing-deep": "साँस गहरा 5 बार",
 	"record.description.cough-shallow": "खाँसी हल्का 3 बार",
 	"record.description.cough-heavy": "खाँसी गहरा 3 बार",
-    "record.description.vowel-a": "\"एक\" जैसे \"ए\" कहिये और जब तक संभव हो बनाए रखे",
-    "record.description.vowel-e": "\"ईश्वर\" जैसे \"ई\" कहिये और जब तक संभव हो बनाए रखे",
-	"record.description.vowel-o": "\"ओस\" जैसे \"ओ\" कहिये और जब तक संभव हो बनाए रखे",
+    "record.description.vowel-a": "\"एक\" में बोलने वाले \"ए\" स्वर  को एक सांस में लम्बा कहते रहिये जब तक संभव हो",
+    "record.description.vowel-e": "\"ईश्वर\" में बोलने वाले \"ई\" स्वर को एक सांस में लम्बा कहते रहिये जब तक संभव हो",
+	"record.description.vowel-o": "\"ओस\" में बोलने वाले \"ओ\" स्वर को एक सांस में लम्बा कहते रहिये जब तक संभव हो",
 	"record.description.counting-normal": "1 से 20 के लिए गणना",
 	"record.description.counting-fast": "तेजी से 1 से 20 के लिए गणना",
 	"record.description.done": "भाग लेने के लिए धन्यवाद!",
