--- a/projects/collect/src/assets/i18n/hi-IN.json
+++ b/projects/collect/src/assets/i18n/hi-IN.json
@@ -78,8 +78,8 @@
     "record.description.vowel-a": "\"एक\" में बोलने वाले \"ए\" स्वर  को एक सांस में लम्बा कहते रहिये जब तक संभव हो",
     "record.description.vowel-e": "\"ईश्वर\" में बोलने वाले \"ई\" स्वर को एक सांस में लम्बा कहते रहिये जब तक संभव हो",
 	"record.description.vowel-o": "\"ओस\" में बोलने वाले \"ओ\" स्वर को एक सांस में लम्बा कहते रहिये जब तक संभव हो",
-	"record.description.counting-normal": "1 से 20 के लिए गणना",
-	"record.description.counting-fast": "तेजी से 1 से 20 के लिए गणना",
+	"record.description.counting-normal": "1 से 20 तक गणना",
+	"record.description.counting-fast": "तेजी से 1 से 20 तक गणना",
 	"record.description.done": "भाग लेने के लिए धन्यवाद!",
 	"record.message.initializing": "आरंभ! कृपया प्रतीक्षा कीजिये...",
  "record.message.uploading": "अपलोड हो रहा है! कृपया प्रतीक्षा कीजिये...",
