--- a/projects/collect/src/assets/i18n/te-IN.json
+++ b/projects/collect/src/assets/i18n/te-IN.json
@@ -1,110 +1,110 @@
 {
     "app.title": "coswara",
-    "metadata.title.no_metadata": "మేము కొనసాగించడానికి కొన్ని సమాచారం అవసరం!",
-    "metadata.tabs.disclaimer": "తనది కాదను వ్యక్తి",
+    "metadata.title.no_metadata": "రికార్డింగ్ ప్రక్రియ కొనసాగించడానికి క్రింది వివరాలు తెలియజేయండి!",
+    "metadata.tabs.disclaimer": "తెలుసుకోండి",
     "metadata.tabs.metadata": "మెటాడేటా",
-    "metadata.tabs.health_status": "హెల్స్ స్టేటస్",
-    "metadata.disclaimer.para1": "ఈ అధ్యయనం మానవ స్వర నుండి శ్వాశకోశ అనారోగ్యమును గుర్తించటానికి సున్నితత్వం యొక్క ఒక అధిక స్థాయి నివేదించారు స్థాపించబడిన ఇతర మునుపటి అధ్యయనాలు ఆధారంగా రూపొందించారు. వ్యాధి గుర్తింపును గణాంక ప్రాముఖ్యత తో ఏ టూల్స్ కూడా తరువాత తేదీలో ఈ అనువర్తనం యొక్క భాగంగా అమలు చేయబడుతుంది. ఈ అధ్యయనంలో పాల్గొనడం పూర్తిగా స్వచ్ఛంద మరియు వివరాలు సేకరించిన ఏ వ్యక్తిగతంగా గుర్తించదగిన సమాచారాన్ని కలిగి ఉండవు.",
-    "metadata.disclaimer.para2": "మొత్తం రికార్డింగ్ మరియు డేటా సేకరణ 5 నిమిషాలు మాత్రమే తీసుకోవాలి. దయచేసి రికార్డింగ్ సమయంలో మీ ముఖం నుండి 20 సెంటీమీటర్ల చుట్టూ మీ పరికరం ఉంచేందుకు మరియు ఒక నిశ్శబ్ద వాతావరణంలో రికార్డింగ్. రికార్డింగ్ పరికరం శుభ్రపరచడం / పారిశుధ్యం ముందు ఇతరులతో భాగస్వామ్యం చేయరాదు.",
-    "metadata.disclaimer.para3": "సైన్స్ ఎథిక్స్ కమిటీ ఇండియన్ ఇన్స్టిట్యూట్ బయటినుంచే రికార్డింగ్ ప్రక్రియ ఆమోదించింది.",
-    "metadata.disclaimer.para4": "క్లిక్ చేసి మా <a href='https://coswara.iisc.ac.in/terms' target='_blank'> నియమాలు మరియు నిబంధనలు </a> అంగీకరించడం, మొదలు మీరు డేటా మరియు ఉద్దీపనల సేకరణ వెళ్లండి చేస్తుంది",
-    "metadata.disclaimer.para4.alternate": "మీరు మా <a href='https://coswara.iisc.ac.in/terms' target='_blank'> నిబంధనలను </a> అంగీకరించారు",
-    "metadata.disclaimer.para5": "ఏవైనా ప్రశ్నలు కోసం, దయచేసి పరిచయం <a href='mailto:sriramg@iisc.ac.in'> sriramg@iisc.ac.in </a>",
-    "metadata.buttons.start": "ప్రారంభం",
-    "metadata.buttons.start_over": "మళ్లీ మొదలెట్టు",
-    "metadata.buttons.continue": "కొనసాగించడానికి",
-    "metadata.buttons.previous": "మునుపటి",
-    "metadata.buttons.next": "తరువాత",
-    "metadata.buttons.submit": "submit",
+    "metadata.tabs.health_status": "ఆరోగ్య స్థితి",
+    "metadata.disclaimer.para1": "ఈ అధ్యయనం స్వర ఆధారిత శ్వాస కోశ సంబంధిత వ్యాధుల నిర్ధారణ పై జరిగిన పరిశోధనల ఫలితాలపైన ఆధారితమైనది. ఈ అధ్యయనం ద్వారా వృద్ధి చేసిన గణాంక ప్రాముఖ్యత కలిగిన టూల్స్ ని భవిష్యత్తులో వ్యాధి నిర్ధారణ కి ఒక ముందు పరీక్ష లాగా అమలు చేయదలిచాము. ఈ అధ్యయనంలో  పాల్గొనుట పూర్తిగా స్వచ్ఛందం, మరియు సేకరించిన వివరాలు ఏ విధమైన వ్యక్తిగతంగా గుర్తించగలిగిన సమాచారాన్ని కలిగి ఉండవు.",
+    "metadata.disclaimer.para2": "మొత్తం రికార్డింగ్ మరియు డేటా సేకరణ 5 నిమిషాలు మాత్రమే తీసుకుంటుంది. దయచేసి రికార్డింగ్ సమయంలో మీ పరికరాన్ని ముఖం నుండి కనీసం 20 సెంటీమీటర్ల దూరం ఉంచండి మరియు ఒక నిశ్శబ్ద వాతావరణంలో రికార్డింగ్ చేయండి. రికార్డింగ్ పరికరం శుభ్రపరచడానికి  ముందు ఇతరులతో పంచుకోరాదు.",
+    "metadata.disclaimer.para3": "రికార్డింగ్ ప్రక్రియ భారతీయ విజ్ఞాన సంస్థ యొక్క ఎథిక్స్ కమిటీ వారిచే ఆమోదించబడినది.",
+    "metadata.disclaimer.para4": "క్రింది ప్రారంభించు పైన క్లిక్ చేయడం ద్వారా సమాచార మరియు స్వర సేకరణ పేజీ కి వెళతారు మరియు మా <a href='https://coswara.iisc.ac.in/terms' target='_blank'> నియమ నిబంధనలు </a> అంగీకరించిన వారవుతారు.",
+    "metadata.disclaimer.para4.alternate": "మీరు మా <a href='https://coswara.iisc.ac.in/terms' target='_blank'> నియమ నిబంధనలు </a> అంగీకరించారు",
+    "metadata.disclaimer.para5": "ఏవైనా ప్రశ్నలు ఉంటే, దయచేసి సంప్రదించండి <a href='mailto:sriramg@iisc.ac.in'> sriramg@iisc.ac.in </a>",
+    "metadata.buttons.start": "ప్రారంభించు",
+    "metadata.buttons.start_over": "మళ్లీ ప్రారంభించు",
+    "metadata.buttons.continue": "కొనసాగించు",
+    "metadata.buttons.previous": "మునుపటిది",
+    "metadata.buttons.next": "తరువాతిది",
+    "metadata.buttons.submit": "సమర్పించు",
     "forms.label.age": "వయసు",
-    "forms.label.gender": "జెండర్",
-    "forms.label.english_proficient": "మీరు ఇంగ్లీష్ లో ప్రావీణ్యం సంపాదిస్తే?",
-    "forms.label.returning_user": "మీరు ఒక తిరిగి యూజరేనా?",
+    "forms.label.gender": "లింగం",
+    "forms.label.english_proficient": "మీకు ఇంగ్లీష్ లో ప్రావీణ్యం ఉందా?",
+    "forms.label.returning_user": "ఇంతకు ముందు రికార్డింగ్ చేసి ఉన్నారా?",
     "forms.label.location": "స్థానం",
     "forms.label.country": "దేశం",
-    "forms.label.state": "రాష్ట్రం / ప్రాంతం",
+    "forms.label.state": "రాష్ట్రం / ప్రావిన్స్",
     "forms.label.locality": "ప్రాంతం / జిల్లా",
     "forms.label.current_status": "ప్రస్తుత స్థితి",
     "forms.label.health_conditions": "ఆరోగ్య పరిస్థితులు",
-    "forms.errors.required": "అవసరం",
-    "forms.errors.age.valid": "చెల్లుబాటు అయ్యే వయస్సు వంటి అనిపించడం లేదు",
-    "forms.errors.field_required": "మార్క్ అన్ని ఖాళీలను (*) తప్పనిసరి",
+    "forms.errors.required": "తప్పనిసరి",
+    "forms.errors.age.valid": "చెల్లుబాటు అయ్యే వయస్సు లాగా అనిపించడం లేదు",
+    "forms.errors.field_required": "(*) గురుతు ఉన్న అంశాలు తప్పనిసరి",
     "forms.options.male": "పురుషుడు",
     "forms.options.female": "స్త్రీ",
     "forms.options.other": "ఇతర",
     "forms.options.yes": "అవును",
-    "forms.options.no": "తోబుట్టువుల",
-    "forms.option.positive_mild": "నేను Covid -19 గుర్తించాడని మరియు స్వల్ప లక్షణాలను కలిగి చేశారు",
-    "forms.option.positive_moderate": "నేను Covid -19 గుర్తించాడని మరియు పరిమితంగా కలిగే తీవ్రమైన లక్షణాలు కలిగి చేశారు",
-    "forms.option.recovered_full": "నేను Covid -19 గుర్తించబడతాడు మరియు పూర్తిగా కోలుకున్న",
-    "forms.option.resp_illness_not_identified": "నేను ఇతర ముందుగా ఉన్న శ్వాస రోగాలతో కానీ Covid -19 తో గుర్తించబడిన కాదు",
-    "forms.option.no_resp_illness_exposed": "నేను ఏ శ్వాస అనారోగ్యం కలిగి కానీ నేను పరిచయం ద్వారా వైరస్ గురైనట్లు ఉండవచ్చు",
-    "forms.option.healthy": "నేను ఏ శ్వాస రోగాలతో లేదు",
+    "forms.options.no": "కాదు",
+    "forms.option.positive_mild": "నాకు కోవిద్-19 నిర్ధారణ అయినది మరియు స్వల్ప లక్షణాలు కలిగి ఉన్నాను",
+    "forms.option.positive_moderate": "నాకు కోవిద్-19 నిర్ధారణ అయినది మరియు పరిమితంగా తీవ్రమైన లక్షణాలు కలిగి ఉన్నాను",
+    "forms.option.recovered_full": "నాకు కోవిద్-19 నిర్ధారణ అయినది మరియు నేను  కోవిద్-19 నుంచి పూర్తిగా కోలుకున్నాను ",
+    "forms.option.resp_illness_not_identified": "నాకు శ్వాస కోశ సంబంధిత వ్యాధి ఉంది, కానీ కోవిద్-19 నిర్ధారణ కాలేదు",
+    "forms.option.no_resp_illness_exposed": "నాకు ఏవిధమైన శ్వాస కోశ సంబంధిత వ్యాధులు లేవు, కానీ పరిచయస్తుల ద్వారా వైరస్ కి గురై ఉండవచ్చు",
+    "forms.option.healthy": "నాకు ఏవిధమైన శ్వాస కోశ సంబంధిత వ్యాధులు లేవు",
     "forms.option.none_of_the_above": "పైవేవీ కావు",
-    "forms.option.cold": "కోల్డ్",
+    "forms.option.cold": "జలుబు",
     "forms.option.cough": "దగ్గు",
     "forms.option.fever": "జ్వరం",
     "forms.option.pneumonia": "న్యుమోనియా",
-    "forms.option.loss_of_smell": "స్మెల్ నష్టం",
-    "forms.option.smoker": "స్మోకర్",
-    "forms.option.asthma": "ఆస్తమా",
+    "forms.option.loss_of_smell": "వాసన కోల్పోవడం",
+    "forms.option.smoker": "ధూమపానం",
+    "forms.option.asthma": "ఆస్తమా (దమ్ము)",
     "forms.option.cld": "దీర్ఘకాల ఊపిరితిత్తుల వ్యాధి",
     "forms.option.ht": "రక్తపోటు",
-    "forms.option.ihd": "ఇస్కీమిక్ గుండె జబ్బు",
-    "forms.option.diabetes": "డయాబెటిస్",
-    "record.message.info": "ఒక నిశ్శబ్ద వాతావరణంలో ఖచ్చితంగా మీరు తయారు మరియు మీ ముఖం నుండి 20 సెంటీమీటర్ల చుట్టూ మీ పరికరం ఉంచేందుకు దయచేసి",
-    "record.title.breathing-shallow": "బ్రీతింగ్ (నిస్సార)",
-    "record.title.breathing-deep": "శ్వాస (డీప్)",
+    "forms.option.ihd": "గుండె సంబంధిత జబ్బులు",
+    "forms.option.diabetes": "మధుమేహం",
+    "record.message.info": "దయచేసి నిశ్శబ్ద వాతావరణం లో రికార్డింగ్ చేయండి  మరియు రికార్డింగ్ పరికరానికి ముఖానికి మధ్య కనీసం 20 సెంటీమీటర్ల దూరం ఉండేలా చూడండి",
+    "record.title.breathing-shallow": "శ్వాస (నిస్సార)",
+    "record.title.breathing-deep": "శ్వాస (లోతుగా)",
     "record.title.cough-shallow": "దగ్గు (నిస్సార)",
     "record.title.cough-heavy": "దగ్గు (భారీ)",
-    "record.title.vowel-a": "అచ్చు / ఒక /",
-    "record.title.vowel-e": "అచ్చు / ఇ /",
-    "record.title.vowel-o": "అచ్చు / o /",
-    "record.title.counting-normal": "కౌంటింగ్ (సాధారణ)",
-    "record.title.counting-fast": "కౌంటింగ్ (ఫాస్ట్)",
+    "record.title.vowel-a": "అచ్చు / ఏ /",
+    "record.title.vowel-e": "అచ్చు / ఈ /",
+    "record.title.vowel-o": "అచ్చు / ఊ /",
+    "record.title.counting-normal": "అంకెల గణన (సాధారణం)",
+    "record.title.counting-fast": "అంకెల గణన (వేగం)",
     "record.title.done": "పూర్తి",
-    "record.description.breathing-shallow": "ఫాస్ట్ 5 సార్లు బ్రీత్",
-    "record.description.breathing-deep": "లోతుగా 5 సార్లు బ్రీత్",
-    "record.description.cough-shallow": "స్వల్పంగా 3 సార్లు దగ్గు",
-    "record.description.cough-heavy": "లోతుగా 3 సార్లు దగ్గు",
-    "record.description.vowel-a": "సే సాధ్యమైనంతవరకు \"చేసిన\" మరియు కొనసాగటానికి ఒక",
-    "record.description.vowel-e": "సే ఇ \"దుంప\" మరియు సాధ్యమైనంతవరకు కొనసాగటానికి వంటి",
-    "record.description.vowel-o": "సే o కాలం సాధ్యమైనంత \"చల్లని\" లో స్థిరమైన గా",
-    "record.description.counting-normal": "1 నుండి 20 వరకు లెక్కింపు",
-    "record.description.counting-fast": "వేగంగా 1 నుండి 20 కు కౌంట్",
+    "record.description.breathing-shallow": "వేగంగా 5 సార్లు శ్వాస తీసుకోండి",
+    "record.description.breathing-deep": "లోతుగా 5 సార్లు శ్వాస తీసుకోండి",
+    "record.description.cough-shallow": "స్వల్పంగా 3 సార్లు దగ్గండి",
+    "record.description.cough-heavy": "లోతుగా 3 సార్లు దగ్గండి",
+    "record.description.vowel-a": " 'ఏ' అని సాధ్యమైనంత ఎక్కువ సమయం అనండి",
+    "record.description.vowel-e": " 'ఈ' అని సాధ్యమైనంత ఎక్కువ సమయం అనండి",
+    "record.description.vowel-o": " 'ఊ' అని సాధ్యమైనంత ఎక్కువ సమయం అనండి",
+    "record.description.counting-normal": "1 నుండి 20 వరకు సాధారణంగా లెక్కించండి",
+    "record.description.counting-fast": "1 నుండి 20 వరకు వేగంగా లెక్కించండి",
     "record.description.done": "మీరు పాల్గొన్నందుకు ధన్యవాదాలు!",
     "record.message.initializing": "ప్రారంభిస్తోంది! దయచేసి వేచి ఉండండి ...",
-    "record.message.uploading": "అప్లోడ్ దయచేసి వేచి ఉండండి ...",
-    "record.button.start_recording": "రికార్డింగ్ ప్రారంభం",
+    "record.message.uploading": "అప్లోడ్ జరుగుతున్నది! దయచేసి వేచి ఉండండి ...",
+    "record.button.start_recording": "రికార్డింగ్  ప్రారంభించు",
     "record.button.stop_recording": "రికార్డింగ్ ఆపు",
-    "record.button.play_sample": "ప్లే నమూనా",
-    "record.button.stop_playing": "స్టాప్ ప్లే",
-    "record.button.play": "ప్లే",
+    "record.button.play_sample": "ఉదాహరణ వినండి",
+    "record.button.stop_playing": "వినడం ఆపండి",
+    "record.button.play": "విను (ప్లే)",
     "record.button.stop": "ఆపు",
     "record.button.upload": "అప్లోడ్",
-    "record.button.record_again": "అగైన్",
+    "record.button.record_again": "మళ్ళి రికార్డ్ చేయండి",
     "record.button.cancel": "రద్దు చేయండి",
     "thanks.heading": "మీరు పాల్గొన్నందుకు ధన్యవాదాలు!",
-    "thanks.message.para1": "ఈ భాగం ఉన్నందుకు ధన్యవాదాలు! మీ స్నేహితులు మరియు బంధువులు మధ్య భాగస్వామ్యం చేయండి.",
-    "thanks.message.para2": "వద్ద మమ్మల్ని అనుసరించండి <a href='https://www.facebook.com/coswara.iisc'> ఫేస్బుక్ </a> మరియు <a href='https://twitter.com/coswara_iisc'> ట్విట్టర్ </a> తాజా నవీకరణలను పొందడానికి.",
+    "thanks.message.para1": "మా ప్రయత్నం లో భాగస్వాములు అయినందుకు ధన్యవాదములు. దయచేసి మీ స్నేహితులు/బంధువులను కూడా ఇందులో భాగస్వాములు కావడానికి ప్రోత్సహించండి.",
+    "thanks.message.para2": "తాజా సమాచారాన్ని పొందడానికి <a href='https://www.facebook.com/coswara.iisc'> ఫేస్ బుక్ </a> మరియు <a href='https://twitter.com/coswara_iisc'> ట్విట్టర్ </a> లో మమ్మల్ని అనుసరించండి.",
     "thanks.button.start_new_session": "ఒక కొత్త సెషన్ మొదలుపెట్టు",
-    "thanks.warning.reuse": "రికార్డింగ్ పరికరం శుభ్రపరచడం / పారిశుధ్యం ముందు ఇతరులతో భాగస్వామ్యం చేయరాదు.",
-    "thanks.developed_by": "అభివృద్ధి",
+    "thanks.warning.reuse": "శానిటైజ్ చేయడానికి (శుభ్రపరచడానికి) ముందు రికార్డింగ్ పరికరాన్ని ఇతరులతో పంచుకోరాదు.",
+    "thanks.developed_by": "అభివృద్ధి చేసినది",
     "thanks.let_us_know_comments": "మీ వ్యాఖ్యానాలు తెలియజేయండి!",
     "thanks.feedback": "అభిప్రాయం",
-    "thanks.button.send_feedback": "అభిప్రాయాన్ని పంపండి",
+    "thanks.button.send_feedback": "అభిప్రాయాన్ని తెలియచేయండి",
     "thanks.feedback.complete": "మీ అభిప్రాయం తెలియచేసినందుకు ధన్యవాదములు!",
     "note.title": "గమనిక",
-    "note.para1": "మీరు Facebook లేదా Twitter App నుండి పేజీని సందర్శించడం ఉంటే, మీరు మైక్రోఫోన్ ఉపయోగించి కష్టం ఎదుర్కోవచ్చు. మద్దతు ఉన్న బ్రౌజర్ దేనిలోనైనా క్రింద తెరవడానికి URL దయచేసి.",
+    "note.para1": "మీరు Facebook లేదా Twitter App నుండి పేజీని సందర్శించి ఉంటే, మైక్రోఫోన్ ఉపయోగించడం లో కష్టం ఎదుర్కోవచ్చు. దయచేసి మద్దతు ఉన్న బ్రౌజర్ దేనిలోనైనా క్రింది URL తెరవడానికి ప్రయత్నించండి.",
     "note.supported_browsers": "మద్దతు ఉన్న బ్రౌజర్లు",
     "browsers.chrome": "Chrome",
-    "browsers.safari": "సఫారి",
-    "browsers.firefox": "ఫైర్ఫాక్స్",
+    "browsers.safari": "Safari",
+    "browsers.firefox": "Firefox",
     "device.pc": "PC",
     "device.mac": "MAC",
     "device.android": "Android",
-    "device.ios": "IOS ఉపకరణాల్లో",
-    "note.button.dismiss": "రద్దుచేసే",
+    "device.ios": "iOs",
+    "note.button.dismiss": "రద్దు చేయి",
     "forms.label.using_mask": "మీరు ఇప్పుడు ముసుగు ధరించారా?",
 	"forms.option.bd": "శ్వాస తీసుకోవడంలో ఇబ్బందులు"
 }
